<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CustomFragment">

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontalSpacing"
        android:hint="@string/event_name" />

    <Button
        android:id="@+id/send_event"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/custom_event" />

    <Button
        android:id="@+id/send_event_json"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/custom_event_with_json" />

    <Button
        android:id="@+id/send_event_args"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/custom_event_with_attributes" />

</LinearLayout>