<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.DeeplinkFragment">

    <TextView
        style="@style/DeeplinkTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deeplink" />

    <TextView
        android:id="@+id/resolved_deeplink"
        style="@style/DeeplinkBaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/DeeplinkTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passthrough" />

    <TextView
        android:id="@+id/resolved_passthrough"
        style="@style/DeeplinkBaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/DeeplinkTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_deferred" />

    <TextView
        android:id="@+id/is_deferred"
        style="@style/DeeplinkBaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>